--- a/index.html
+++ b/index.html
@@ -16,18 +16,25 @@
         width: 100%;
         height: 100%;
       }
+      #form {
+        margin: auto;
+        position: absolute;
+        top: 0; left: 0; bottom: 0; right: 0;
+        padding:20px;
+        background-color: grey;
+        width:90%;
+        height:90%;
+      }
     </style>
   </head>
   <body>
     <div id="map" class="map"></div>
+    <div id="form" style="display:none">
+      <form role="form"></form>
+    </div>
     <script src="jquery.min.js" type="text/javascript"></script>
+    <script src="ol3/resources/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="ol3/resources/example-behaviour.js" type="text/javascript"></script>
     <script src="loader.js?id=mobile-full-screen" type="text/javascript"></script>
-
-    <div style="display: none;">
-      <div id="title">Mobile full screen example</div>
-      <div id="shortdesc">Example of a full screen map.</div>
-      <div id="tags">fullscreen, bing, geolocation, mobile</div>
-    </div>
   </body>
 </html>
