--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         width: 100%;
         height: 100%;
       }
-      #form {
+      #formDiv {
         margin: auto;
         position: absolute;
         top: 0; left: 0; bottom: 0; right: 0;
@@ -29,7 +29,7 @@
   </head>
   <body>
     <div id="map" class="map"></div>
-    <div id="form" style="display:none">
+    <div id="formDiv" style="display:none" class="well">
       <form role="form"></form>
     </div>
     <script src="jquery.min.js" type="text/javascript"></script>
