Initial support for client-side image resize

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         top: 2.5em;
       }
     </style>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   </head>
   <body>
     <div id="map" class="map"></div>
@@ -49,10 +50,14 @@
     </div>    
     <div id="formDiv" style="display:none" class="well">
       <form role="form"></form>
-    </div>
-    <script src="jquery.min.js" type="text/javascript"></script>
+    </div> 
     <script src="ol3/resources/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="ol3/resources/example-behaviour.js" type="text/javascript"></script>
     <script src="loader.js?id=mobile-full-screen" type="text/javascript"></script>
+    <script src="plugins/jquery.exif.js"></script>
+    <script src="plugins/binaryajax.js"></script>
+    <script src="plugins/exif.js"></script>
+    <script src="plugins/jquery.canvasResize.js"></script> 
+    <script src="plugins/canvasResize.js"></script>
   </body>
 </html>
