--- a/website/index.html
+++ b/website/index.html
@@ -1,21 +1,55 @@
 <!DOCTYPE html>
 <html>
-<title>Hello Strapdown</title>
+<title>Field Correspondent</title>
 
-<xmp theme="united" style="display:none;">
-# Markdown text goes in here
+<xmp theme="spacelab" style="display:none;">
+# Field Correspondent
 
-## Chapter 1
+![Field Correspondent](http://i.imgur.com/ZyuvGQE.png)
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-et dolore magna aliqua. 
+## Challenge
 
-## Chapter 2
+**Field Correspondent** is a collaboration of Simon O'Keefe and Herve Senot for the [Brisbane GIS Day 2014 Map App Hack](www.gisday.com.au/competitions/map-app-hack/), a nationwide open data competition. Our challenge is to...
 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-culpa qui officia deserunt mollit anim id est laborum.
+> develop a great entrepreneurial and creative app that makes use of spatial technology and open data on a smartphone app platform.
+
+In late October 2014, we brainstormed ideas about how we could use the concept of capturing photos from a phone (an exciting new feature in modern mobile browsers) and how it could relate to *open data*. **Field Correspondent** was born.
+
+**Field Correspondent** enables you and the people you invite to capture photos and other information about places you care about - directly from a mobile device. No app installation required!
+
+## A new generation information-gathering tool
+
+Want to build a **photo library** of important historic sites in your area? Upload your location data and invite community members to capture the photos on their phones.
+
+Want to promote a **winery tour** in your region? Upload your location data and send out a challenge for wine lovers to record each winery visit with a photo.
+
+Want to keep a record of maintenance or inspections on your organisation's **assets, facilities or vegetation**. Upload your location data and invite your field workers to log their activities on their phone, including before and after photos.
+
+Want to enable residents to notify you of **hazards, vandalism and littering** they discover directly from their phone. Embed the a Field Correpondent map in your website.
+
+### Use Cases
+
+* community participation
+* asset inspections
+* recreation/treasure hunt
+* historic refernce
+* time series
+* risk management
+* emergency management
+* maintenance tracking
+* field verfication
+* tourism trails
+* travel diary
+* competitions
+* check-in
+* citizen reporting
+* audio tours
+* environmental monitoring
+* hazard identification
+* location scouting
+* fitness trail challenge
+* student field trips
+
 </xmp>
 
 <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
