Better form layout

--- a/index.html
+++ b/index.html
@@ -30,11 +30,9 @@
       #formDiv {
         margin: auto;
         position: absolute;
-        top: 0; left: 0; bottom: 0; right: 0;
+        top: 30px; left: 0; bottom: 0; right: 0;
         padding:20px;
-        background-color: grey;
-        width:90%;
-        height:90%;
+        background-color: white;
       }
       /* Overrides zoom in/out placement to cater for the infoDiv */
       .ol-zoom {
@@ -46,7 +44,7 @@
   <body>
     <div id="map" class="map"></div>
     <div id="infoDiv" class="alert-info">
-      <span>Move map to discover sites</span>
+      <span>Loading ...</span>
     </div>    
     <div id="formDiv" style="display:none" class="well">
       <form role="form"></form>
