Better handling of image preview

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
       .ol-zoom {
         top: 2.5em;
       }
+
+      h3 {
+        font-size: 18px;
+        line-height:18px;
+        margin:5px 0;
+      }
     </style>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   </head>
