--- a/index.html
+++ b/index.html
@@ -41,8 +41,18 @@
         padding: 5px;
         cursor: pointer;
         color:#FFF;
-        background-color:rgba(128,128,128,0.5);        
+        background-color:rgba(128,128,128,0.5);    
       }
+
+      #spinDiv {
+        display:none;
+        position: absolute;
+        width: 100%;
+        height:100%;
+        background-color:rgba(45,45,45,0.5);
+        z-index:10;
+      }
+
       /* Overrides zoom in/out placement to cater for the infoDiv */
       .ol-zoom {
         top: 2.5em;
@@ -53,10 +63,17 @@
         line-height:18px;
         margin:5px 0;
       }
+
+      .spinner {
+        width: 100%;
+        height: 100%;
+        background-color: rgba(255,0,0,0.5);
+      }
     </style>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   </head>
   <body>
+    <div id="spinDiv"></div>
     <div id="map" class="map"></div>
     <div id="infoDiv" class="alert-info">
       <span>Loading ...</span>
@@ -75,5 +92,7 @@
     <script src="plugins/exif.js"></script>
     <script src="plugins/jquery.canvasResize.js"></script> 
     <script src="plugins/canvasResize.js"></script>
+    <script src="spin.js/spin.min.js"></script>
+    <script src="spin.js/jquery.spin.js"></script>
   </body>
 </html>
