--- a/index.html
+++ b/index.html
@@ -40,10 +40,8 @@
         margin: 5px;
         padding: 5px;
         cursor: pointer;
-        color:#FFF;
         background-color:rgba(128,128,128,0.5);    
       }
-
       #spinDiv {
         display:none;
         position: absolute;
@@ -52,22 +50,25 @@
         background-color:rgba(45,45,45,0.5);
         z-index:10;
       }
-
       /* Overrides zoom in/out placement to cater for the infoDiv */
       .ol-zoom {
         top: 2.5em;
       }
-
+      .ol-control button {
+        background-color:rgba(211,211,211,0.5);
+      }
+      .ol-control button:hover {
+        background-color:rgba(190,190,190,0.5);
+      }
       h3 {
         font-size: 18px;
         line-height:18px;
         margin:5px 0;
       }
-
       .spinner {
         width: 100%;
         height: 100%;
-        background-color: rgba(255,0,0,0.5);
+        background-color: rgba(255,0,0,0.33);
       }
     </style>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -82,7 +83,7 @@
       <form role="form"></form>
     </div>
     <div id="gpsDiv">
-      <img src="img/gps.png" width="20"/>
+      <img src="img/gps.png" width="25"/>
     </div>
     <script src="ol3/resources/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="ol3/resources/example-behaviour.js" type="text/javascript"></script>
