--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         top: 2.5em;
       }
       .ol-control button {
-        background-color:rgba(211,211,211,0.5);
+        background-color:rgba(128,128,128,0.5);
       }
       .ol-control button:hover {
-        background-color:rgba(190,190,190,0.5);
+        background-color:rgba(80,80,80,0.5);
       }
       h3 {
         font-size: 18px;
@@ -85,14 +85,14 @@
     <div id="gpsDiv">
       <img src="img/gps.png" width="25"/>
     </div>
-    <script src="ol3/resources/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+    <!--script src="ol3/resources/bootstrap/js/bootstrap.min.js" type="text/javascript"></script-->
     <script src="ol3/resources/example-behaviour.js" type="text/javascript"></script>
     <script src="loader.js?id=mobile-full-screen" type="text/javascript"></script>
-    <script src="plugins/jquery.exif.js"></script>
     <script src="plugins/binaryajax.js"></script>
     <script src="plugins/exif.js"></script>
-    <script src="plugins/jquery.canvasResize.js"></script> 
+    <script src="plugins/jquery.exif.js"></script>
     <script src="plugins/canvasResize.js"></script>
+    <script src="plugins/jquery.canvasResize.js"></script> 
     <script src="spin.js/spin.min.js"></script>
     <script src="spin.js/jquery.spin.js"></script>
   </body>
