--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         background-color: rgba(255,0,0,0.33);
       }
     </style>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   </head>
   <body>
     <div id="spinDiv"></div>
