--- a/website/index.html
+++ b/website/index.html
@@ -180,7 +180,7 @@ body {
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </a>
-            <a class="navbar-brand" href="#"><img src="img/fc-logo-white-100x64.png" style="width:50px;height:32px;margin-right:10px">Field Correspondent</a>
+            <a class="navbar-brand" href="#"><img src="img/apple-touch-icon-60x60.png" style="height:24px;margin-right:10px">Field Correspondent</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
