Commence populating content

--- a/website/index.html
+++ b/website/index.html
@@ -210,7 +210,7 @@ body {
           <div class="container">
             <div class="carousel-caption">
               <h1>Field Correspondent</h1>
-              <h3>Collaborative location-based information gathering</h3>
+              <h3>Collaborative location-based information gathering for open data</h3>
             </div>
           </div>
         </div>
@@ -254,15 +254,23 @@ body {
         </div>
       </div><!-- /.row -->
 
-
       <!-- START THE FEATURETTES -->
 
       <hr class="featurette-divider">
 
       <div class="featurette">
         <img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
-        <h2 class="featurette-heading">Responsive Design. <span class="text-muted">It'll blow your mind.</span></h2>
-        <p class="lead">In simple terms, a responsive web design figures out what resolution of device it's being served on. Flexible grids then size correctly to fit the screen.</p>
+        <h2 class="featurette-heading"><a href="http://www.gisday.com.au/competitions/map-app-hack/" target="_blank">GIS Day 2014.</a> <span class="text-muted">Map App Hack Challenge.</span></h2>
+        <p class="lead">Field Correspondent is a collaboration of Simon O'Keefe (<a href="http://www.groundtruth.com.au" target="_blank">Groundtruth</a>) and Herve Senot (<a href="http://www.groundtruth.com.au" target="_blank">Groundtruth</a>, <a href="http://www.carbongis.com.au" target="_blank">Carbon GIS</a>) for the <a href="http://www.gisday.com.au/competitions/map-app-hack/" target="_blank">Brisbane GIS Day 2014 Map App Hack</a>, a nationwide open data competition. Our challenge is to...</p>
+        <blockquote>
+        <p><em>develop a great entrepreneurial and creative app that makes use of spatial technology and open data on a smartphone app platform.</em></p>
+        </blockquote>
+        <p>In late October 2014, we brainstormed ideas about how we could use the concept of capturing photos from a phone (an exciting new feature in modern mobile browsers) and how it could relate to <em>open data</em>. <strong>Field Correspondent</strong> was born.</p>
+        <p><strong>Field Correspondent</strong> enables you and the people you invite to capture photos and other information about places you care about - directly from a mobile device. No app installation required!</p>
+        <p>Want to build a <strong>photo library</strong> of important historic sites in your town? Select sites from freely available government heritage register and invite community members to capture the photos on their phones.</p>
+        <p>Want to promote a <strong>winery tour</strong> in your region? Upload your winery locations and challenge wine lovers to record each winery visit with a photo.</p>
+        <p>Want to keep a record of maintenance or inspections on your organisation's <strong>assets, facilities or vegetation</strong>? Upload your location data and invite your field workers to log their activities on their phone, including before and after photos.</p>
+        <p>Want to enable the public to notify your organisation of <strong>hazards, property damage and littering</strong> they discover directly from their phone? Embed a Field Correspondent map in your website which users can use directly on their mobile device.</p>
       </div>
 
       <hr class="featurette-divider">
