Minor form reformat

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div id="infoDiv" class="alert-info">
       <span>Loading ...</span>
     </div>    
-    <div id="formDiv" style="display:none" class="well">
+    <div id="formDiv" style="display:none" class="panel panel-default">
       <form role="form"></form>
     </div>
     <div id="gpsDiv">
