--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
       }
       #gpsDiv {
         position: absolute;
-        bottom: 0; right: 0;
+        top:7em;
+        left: 0;
         margin: 5px;
         padding: 5px;
         cursor: pointer;
@@ -99,7 +100,7 @@
       <form role="form"></form>
     </div>
     <div id="gpsDiv">
-      <img src="img/gps.png" width="25"/>
+      <img src="img/gps.png" width="20"/>
     </div>
     <!--script src="ol3/resources/bootstrap/js/bootstrap.min.js" type="text/javascript"></script-->
     <script src="ol3/resources/example-behaviour.js" type="text/javascript"></script>
