Enlarge and centre logo
and minor improvement to wording

--- a/website/index.html
+++ b/website/index.html
@@ -164,6 +164,9 @@ body {
 
 }
 
+.navbar-brand {
+    padding: 10px 10px;
+}
         </style>
     </head>
     
@@ -180,7 +183,7 @@ body {
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </a>
-            <a class="navbar-brand" href="#"><img src="img/apple-touch-icon-60x60.png" style="height:24px;margin-right:10px">Field Correspondent</a>
+            <a class="navbar-brand" href="#"><img src="img/apple-touch-icon-60x60.png" style="height:32px;margin-right:10px">Field Correspondent</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
@@ -269,8 +272,8 @@ body {
         <p><strong>Field Correspondent</strong> enables you and the people you invite to capture photos and other information about places you care about - directly from a mobile device. No app installation required!</p>
         <p>Want to build a <strong>photo library</strong> of important historic sites in your town? Select sites from freely available government heritage register and invite community members to capture the photos on their phones.</p>
         <p>Want to promote a <strong>winery tour</strong> in your region? Upload your winery locations and challenge wine lovers to record each winery visit with a photo.</p>
-        <p>Want to keep a record of maintenance or inspections on your organisation's <strong>assets, facilities or vegetation</strong>? Upload your location data and invite your field workers to log their activities on their phone, including before and after photos.</p>
-        <p>Want to enable the public to notify your organisation of <strong>hazards, property damage and littering</strong> they discover directly from their phone? Embed a Field Correspondent map in your website which users can use directly on their mobile device.</p>
+        <p>Want to keep a record of maintenance or inspections on your organisation's <strong>assets, facilities or vegetation</strong>? Open up your asset location data to the web and invite your field workers to log their activities on their phone, including before and after photos.</p>
+        <p>Want to enable the public to notify your organisation of <strong>hazards, property damage and littering</strong> they discover directly from their phone? Embed a Field Correspondent map in your website which users can use directly on their mobile device to record the issues that matter to them.</p>
       </div>
 
       <hr class="featurette-divider">
