--- a/website/index.html
+++ b/website/index.html
@@ -238,21 +238,21 @@ body {
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-md-4 text-center">
-          <img src="img/GIS_Day_2014_Header_Logo_Retina_140x140.png">
-          <h2>Map App Hack</h2>
-          <p>Field Correspondent is designed to solve the real-world problem: how do you coordinate information gathering for .</p>
+          <img src="img/gps-grey-140x140.png">
+          <h2>Locate</h2>
+          <p>Find the places that need documenting.</p>
           <p><a class="btn btn-default" href="#">View details »</a></p>
         </div>
         <div class="col-md-4 text-center">
-          <img src="img/new-observation-icon-140x140.png">
-          <h2>One Fluid Grid</h2>
-          <p>There is now just one percentage-based grid for Bootstrap 3. Customize for fixed widths.</p>
+          <img src="img/new-observation-icon-180x186.png">
+          <h2>Tap</h2>
+          <p>Click on the icon showing the nearby feature.</p>
           <p><a class="btn btn-default" href="#">View details »</a></p>
         </div>
         <div class="col-md-4 text-center">
           <img src="img/camera-140x140.png">
-          <h2>LESS is More</h2>
-          <p>Improved support for mixins make the new Bootstrap 3 easier to customize.</p>
+          <h2>Capture</h2>
+          <p>Record what you see, and even take a photo.</p>
           <p><a class="btn btn-default" href="#">View details »</a></p>
         </div>
       </div><!-- /.row -->
