--- a/website/index.html
+++ b/website/index.html
@@ -27,7 +27,13 @@
     <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
 
-        
+    <link href="http://cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+        #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+        /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+           We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+    </style>
+
         <!-- CSS code from Bootply.com editor -->
         
         <style type="text/css">
@@ -185,6 +191,7 @@ body {
             </a>
             <a class="navbar-brand" href="#"><img src="img/apple-touch-icon-60x60.png" style="height:32px;margin-right:10px">Field Correspondent</a>
             </div>
+<!-- 
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
@@ -192,7 +199,7 @@ body {
                 <li><a href="#contact">Contact</a></li>
               </ul>
             </div>
-
+ -->
         </div>
       </div><!-- /container -->
     </div><!-- /navbar wrapper -->
@@ -213,7 +220,8 @@ body {
           <div class="container">
             <div class="carousel-caption">
               <h1>Field Correspondent</h1>
-              <h3>Collaborative location-based information gathering for open data</h3>
+              <p>Collaborative location-based information gathering for open data</p>
+              <p><a class="btn btn-lg btn-success" href="http://fieldcorrespondent.com/?id=wdjp">Try a demo</a>
             </div>
           </div>
         </div>
@@ -234,6 +242,23 @@ body {
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
     <div class="container marketing">
+
+      <div class="featurette">
+        <img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
+        <h2 class="featurette-heading"><a href="http://www.gisday.com.au/competitions/map-app-hack/" target="_blank">GIS Day 2014.</a> <span class="text-muted">Map App Hack Challenge.</span></h2>
+        <p class="lead"><strong>Field Correspondent</strong> is a collaboration of Simon O'Keefe (<a href="http://www.groundtruth.com.au" target="_blank">Groundtruth</a>) and Herve Senot (<a href="http://www.groundtruth.com.au" target="_blank">Groundtruth</a>, <a href="http://www.carbongis.com.au" target="_blank">Carbon GIS</a>) for the <a href="http://www.gisday.com.au/competitions/map-app-hack/" target="_blank">Brisbane GIS Day 2014 Map App Hack</a>, a nationwide open data competition. Our challenge is to...</p>
+        <blockquote>
+        <p><em>develop a great entrepreneurial and creative app that makes use of spatial technology and open data on a smartphone app platform.</em></p>
+        </blockquote>
+        <p>In late October 2014, we brainstormed ideas about how we could use the concept of capturing photos from a phone (an exciting new feature in modern mobile browsers) and how it could relate to <em>open data</em>. <strong>Field Correspondent</strong> was born.</p>
+        <p><strong>Field Correspondent</strong> enables you and the people you invite to capture photos and other information about places you care about - directly from a mobile device. No app installation required!</p>
+        <p>Want to build a <strong>photo library</strong> of important historic sites in your town? Select sites from freely available government heritage register and invite community members to capture the photos on their phones.</p>
+        <p>Want to promote a <strong>winery tour</strong> in your region? Upload your winery locations and challenge wine lovers to record each winery visit with a photo.</p>
+        <p>Want to keep a record of maintenance or inspections on your organisation's <strong>assets, facilities or vegetation</strong>? Open up your asset location data to the web and invite your field workers to log their activities on their phone, including before and after photos.</p>
+        <p>Want to enable the public to notify your organisation of <strong>hazards, property damage and littering</strong> they discover directly from their phone? Embed a Field Correspondent map in your website which users can use directly on their mobile device to record the issues that matter to them.</p>
+      </div>
+
+      <hr class="featurette-divider">
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
@@ -262,45 +287,68 @@ body {
       <hr class="featurette-divider">
 
       <div class="featurette">
-        <img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
-        <h2 class="featurette-heading"><a href="http://www.gisday.com.au/competitions/map-app-hack/" target="_blank">GIS Day 2014.</a> <span class="text-muted">Map App Hack Challenge.</span></h2>
-        <p class="lead">Field Correspondent is a collaboration of Simon O'Keefe (<a href="http://www.groundtruth.com.au" target="_blank">Groundtruth</a>) and Herve Senot (<a href="http://www.groundtruth.com.au" target="_blank">Groundtruth</a>, <a href="http://www.carbongis.com.au" target="_blank">Carbon GIS</a>) for the <a href="http://www.gisday.com.au/competitions/map-app-hack/" target="_blank">Brisbane GIS Day 2014 Map App Hack</a>, a nationwide open data competition. Our challenge is to...</p>
-        <blockquote>
-        <p><em>develop a great entrepreneurial and creative app that makes use of spatial technology and open data on a smartphone app platform.</em></p>
-        </blockquote>
-        <p>In late October 2014, we brainstormed ideas about how we could use the concept of capturing photos from a phone (an exciting new feature in modern mobile browsers) and how it could relate to <em>open data</em>. <strong>Field Correspondent</strong> was born.</p>
-        <p><strong>Field Correspondent</strong> enables you and the people you invite to capture photos and other information about places you care about - directly from a mobile device. No app installation required!</p>
-        <p>Want to build a <strong>photo library</strong> of important historic sites in your town? Select sites from freely available government heritage register and invite community members to capture the photos on their phones.</p>
-        <p>Want to promote a <strong>winery tour</strong> in your region? Upload your winery locations and challenge wine lovers to record each winery visit with a photo.</p>
-        <p>Want to keep a record of maintenance or inspections on your organisation's <strong>assets, facilities or vegetation</strong>? Open up your asset location data to the web and invite your field workers to log their activities on their phone, including before and after photos.</p>
-        <p>Want to enable the public to notify your organisation of <strong>hazards, property damage and littering</strong> they discover directly from their phone? Embed a Field Correspondent map in your website which users can use directly on their mobile device to record the issues that matter to them.</p>
-      </div>
-
-      <hr class="featurette-divider">
-
-      <div class="featurette">
         <img class="featurette-image img-circle pull-left" src="http://placehold.it/512">
-        <h2 class="featurette-heading">Smaller Footprint. <span class="text-muted">Lightweight.</span></h2>
-        <p class="lead">The new Bootstrap 3 promises to be a smaller build. The separate Bootstrap base and responsive.css files have now been merged into one. There is no more fixed grid, only fluid.</p>
+        <h2 class="featurette-heading">Collaborative information gathering. <span class="text-muted">Simple.</span></h2>
+        <p class="lead">For public, community groups and authorities.</p>
+            <li>community participation</li>
+            <li>asset inspections</li>
+            <li>recreation/treasure hunt</li>
+            <li>historic refernce</li>
+            <li>time series</li>
+            <li>risk management</li>
+            <li>emergency management</li>
+            <li>maintenance tracking</li>
+            <li>field verfication</li>
+            <li>tourism trails</li>
+            <li>travel diary</li>
+            <li>competitions</li>
+            <li>check-in</li>
+            <li>citizen reporting</li>
+            <li>audio tours</li>
+            <li>environmental monitoring</li>
+            <li>hazard identification</li>
+            <li>location scouting</li>
+            <li>fitness trail challenge</li>
+            <li>student field trips</li>
+            <li>civic compliance</li>
       </div>
 
       <hr class="featurette-divider">
 
       <div class="featurette">
         <img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
-        <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Flatness.</span></h2>
-        <p class="lead">A big design trend for 2013 is "flat" design. Gone are the days of excessive gradients and shadows. Designers are producing cleaner flat designs, and Bootstrap 3 takes advantage of this minimalist trend.</p>
-      </div>
+        <h2 class="featurette-heading">Web App vs Native App. <span class="text-muted">No contest.</span></h2>
+        <p class="lead">A web app is an application that is accessible via your device's browser. It looks and behaves like a native app that you download and install from Google Play or iTunes, but with the following advantages</p>
+        <li>no installation required</li>
+        <li>always up-to-date</li>
+        <li>available for all mobile devices (iOS, Android, Windows) and even desktp browsers</li>
+        <li>no restrictios on use of technologies</li>
+        <li>no delay, waiting for app store</li>
+        </div>
 
       <hr class="featurette-divider">
 
       <!-- /END THE FEATURETTES -->
 
-
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>This Bootstrap layout is compliments of Bootply. · <a href="http://www.bootply.com/62603">Edit on Bootply.com</a></p>
+        <p>Field Correspondent: Collaborative location-based information gathering for open data</p>
+
+      <!-- Begin MailChimp Signup Form -->
+      <div id="mc_embed_signup">
+      <form action="http://groundtruth.us3.list-manage.com/subscribe/post?u=41f1d0e21958109c0732cea9f&amp;id=9bbf6a6714" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <div id="mc_embed_signup_scroll">
+          <label for="mce-EMAIL">Get notified of further development</label>
+          <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;"><input type="text" name="b_41f1d0e21958109c0732cea9f_9bbf6a6714" tabindex="-1" value=""></div>
+          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+          </div>
+      </form>
+      </div>
+      <!--End mc_embed_signup-->
+
       </footer>
 
     </div><!-- /.container -->
