--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         position: absolute;
         width: 100%;
         height:100%;
+        overflow: hidden;
         background-color:rgba(45,45,45,0.5);
         z-index:10;
       }
@@ -109,15 +110,11 @@
       <img src="img/gps.png"/>
     </div>
     <!--script src="ol3/resources/bootstrap/js/bootstrap.min.js" type="text/javascript"></script-->
-    <script src="ol3/resources/example-behaviour.js" type="text/javascript"></script>
     <script src="loader.js?id=mobile-full-screen" type="text/javascript"></script>
     <script src="plugins/binaryajax.js"></script>
     <script src="plugins/exif.js"></script>
-    <script src="plugins/jquery.exif.js"></script>
     <script src="plugins/canvasResize.js"></script>
-    <script src="plugins/jquery.canvasResize.js"></script> 
     <script src="spin.js/spin.min.js"></script>
-    <script src="spin.js/jquery.spin.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
