--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       }
       #minidashDiv{
         position: absolute;
-        left:-310px;
-        width:350px;
+        left:-260px;
+        width:300px;
         bottom:0;
         color:white;
         font-weight:bold;
@@ -110,14 +110,14 @@
     <div id="spinDiv"></div>
     <div id="map" class="map"></div>
     <div id="infoDiv" class="alert-info">
-      <span>Loading ...</span>
+      <span class="proj_title">Loading ...</span>
     </div>
     <div id="minidashDiv">
-      <div id="fulldash" style="margin:5px 0px 10px;background-color:rgba(128,128,128,0.75);float: left;width: 300px;padding:5px;border-radius: 0px 4px 4px 0px;border-color:#fff;">
-        <div id="stats_proj" style="border:1px;">
-          <p>## Hobsons Bay Heritage Overlays</p>
-          <p>43% (331 sites visited out of 721)</p>
-          <p>link to all contributions</p>
+      <div id="fulldash" style="margin:5px 0px 10px;background-color:rgba(128,128,128,0.75);float: left;width: 250px;padding:5px;border-radius: 0px 4px 4px 0px;border-color:#fff;">
+        <div style="border:1px;">
+          <p class="proj_title" style="text-decoration:underline;">Project title</p>
+          <p id="stats_proj"></p>
+          <p><a id="observations_link" href="observations.html?id=" target="_blank">All observations</a></p>
         </div>
         <div id="stats_me" style="border:1px;">
           <p>## Simon</p>
@@ -127,7 +127,7 @@
         </div>        
       </div>
       <div id="dashTeaser" style="height:30px;width:30px;background-color:rgba(128,128,128,0.5);float: left;margin:185px 0 0 0;padding:5px;text-align:center;border-radius: 0px 4px 4px 0px;border-color:#fff; cursor:pointer;">
-        <p style="margin:5px 0;">43%</p>
+        <p id="stats_proj_teaser" style="margin:5px 0;font-size:12px;"></p>
       </div>
     </div>
     <div id="formDiv" style="display:none" class="panel panel-default">
