Move trial button, hide image placeholders

--- a/website/index.html
+++ b/website/index.html
@@ -12,7 +12,7 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 
-     <!-- Local CSS
+    <!-- Local CSS
     <link rel="stylesheet" href="css/bootstrap.min.css">
      -->
 
@@ -221,7 +221,6 @@ body {
             <div class="carousel-caption">
               <h1>Field Correspondent</h1>
               <p>Collaborative location-based information gathering for open data</p>
-              <p><a class="btn btn-lg btn-success" href="http://fieldcorrespondent.com/?id=wdjp">Try a demo</a>
             </div>
           </div>
         </div>
@@ -236,6 +235,11 @@ body {
     </div>
     <!-- /.carousel -->
 
+    <div align=center>
+      <p><a class="btn btn-lg btn-success" href="http://fieldcorrespondent.com/?id=wdjp">Try a demo</a>
+    </div>
+
+    <!-- <hr class="featurette-divider"> -->
 
     <!-- Marketing messaging and featurettes
     ================================================== -->
@@ -244,9 +248,9 @@ body {
     <div class="container marketing">
 
       <div class="featurette">
-        <img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
+        <img class="featurette-image img-circle pull-right" src="img/GIS_Day_2014_Header_Logo_Retina_140x140.png">
         <h2 class="featurette-heading"><a href="http://www.gisday.com.au/competitions/map-app-hack/" target="_blank">GIS Day 2014.</a> <span class="text-muted">Map App Hack Challenge.</span></h2>
-        <p class="lead"><strong>Field Correspondent</strong> is a collaboration of Simon O'Keefe (<a href="http://www.groundtruth.com.au" target="_blank">Groundtruth</a>) and Herve Senot (<a href="http://www.groundtruth.com.au" target="_blank">Groundtruth</a>, <a href="http://www.carbongis.com.au" target="_blank">Carbon GIS</a>) for the <a href="http://www.gisday.com.au/competitions/map-app-hack/" target="_blank">Brisbane GIS Day 2014 Map App Hack</a>, a nationwide open data competition. Our challenge is to...</p>
+        <p class="lead"><strong>Field Correspondent</strong> is a collaboration of Simon O'Keefe (<a href="http://www.groundtruth.com.au" target="_blank">Groundtruth</a>) and Herve Senot (<a href="http://www.groundtruth.com.au" target="_blank">Groundtruth</a>, <a href="http://www.carbongis.com.au" target="_blank">Carbon GIS</a>) for the <a href="http://www.gisday.com.au/competitions/map-app-hack/" target="_blank">Brisbane GIS Day 2014 Map App Hack</a>, a nationwide open data competition. Our challenge was to...</p>
         <blockquote>
         <p><em>develop a great entrepreneurial and creative app that makes use of spatial technology and open data on a smartphone app platform.</em></p>
         </blockquote>
@@ -258,36 +262,12 @@ body {
         <p>Want to enable the public to notify your organisation of <strong>hazards, property damage and littering</strong> they discover directly from their phone? Embed a Field Correspondent map in your website which users can use directly on their mobile device to record the issues that matter to them.</p>
       </div>
 
-      <hr class="featurette-divider">
-
-      <!-- Three columns of text below the carousel -->
-      <div class="row">
-        <div class="col-md-4 text-center">
-          <img src="img/gps-grey-140x140.png">
-          <h2>Locate</h2>
-          <p>Find the places that need documenting.</p>
-          <p><a class="btn btn-default" href="#">View details »</a></p>
-        </div>
-        <div class="col-md-4 text-center">
-          <img src="img/new-observation-icon-180x186.png">
-          <h2>Tap</h2>
-          <p>Click on the icon showing the nearby feature.</p>
-          <p><a class="btn btn-default" href="#">View details »</a></p>
-        </div>
-        <div class="col-md-4 text-center">
-          <img src="img/camera-140x140.png">
-          <h2>Capture</h2>
-          <p>Record what you see, and even take a photo.</p>
-          <p><a class="btn btn-default" href="#">View details »</a></p>
-        </div>
-      </div><!-- /.row -->
-
       <!-- START THE FEATURETTES -->
 
       <hr class="featurette-divider">
 
       <div class="featurette">
-        <img class="featurette-image img-circle pull-left" src="http://placehold.it/512">
+        <!-- <img class="featurette-image img-circle pull-left" src="http://placehold.it/512"> -->
         <h2 class="featurette-heading">Collaborative information gathering. <span class="text-muted">Simple.</span></h2>
         <p class="lead">For public, community groups and authorities.</p>
             <li>community participation</li>
@@ -316,17 +296,40 @@ body {
       <hr class="featurette-divider">
 
       <div class="featurette">
-        <img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
+        <!-- <img class="featurette-image img-circle pull-right" src="http://placehold.it/512"> -->
         <h2 class="featurette-heading">Web App vs Native App. <span class="text-muted">No contest.</span></h2>
         <p class="lead">A web app is an application that is accessible via your device's browser. It looks and behaves like a native app that you download and install from Google Play or iTunes, but with the following advantages</p>
         <li>no installation required</li>
         <li>always up-to-date</li>
-        <li>available for all mobile devices (iOS, Android, Windows) and even desktp browsers</li>
-        <li>no restrictios on use of technologies</li>
+        <li>available for all mobile devices (iOS, Android, Windows) and even desktop browsers</li>
+        <li>no restrictions on use of technologies</li>
         <li>no delay, waiting for app store</li>
         </div>
 
       <hr class="featurette-divider">
+
+      <!-- Three columns of text below the carousel -->
+      <div class="row">
+        <div class="col-md-4 text-center">
+          <img src="img/gps-grey-140x140.png">
+          <h2>Locate</h2>
+          <p>Find the places that need documenting.</p>
+          <!-- <p><a class="btn btn-default" href="#">View details »</a></p> -->
+        </div>
+        <div class="col-md-4 text-center">
+          <img src="img/new-observation-icon-180x186.png">
+          <h2>Tap</h2>
+          <p>Tap on the icon showing the nearby feature.</p>
+          <!-- <p><a class="btn btn-default" href="#">View details »</a></p> -->
+        </div>
+        <div class="col-md-4 text-center">
+          <img src="img/camera-140x140.png">
+          <h2>Capture</h2>
+          <p>Record what you see, and even take a photo.</p>
+          <!-- <p><a class="btn btn-default" href="#">View details »</a></p> -->
+        </div>
+      </div><!-- /.row -->
+
 
       <!-- /END THE FEATURETTES -->
 
