User stats based on locally stored contributor name

--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
         <div style="border:1px;">
           <p class="proj_title" style="text-decoration:underline;">Project title</p>
           <p id="stats_proj"></p>
-          <p><a id="observations_link" href="observations.html?id=" target="_blank">All observations</a></p>
+          <p><a id="observations_link" href="observations.html?id=" target="_blank">All contributions</a></p>
         </div>
         <div id="stats_me" style="border:1px;">
-          <p>## Simon</p>
-          <p>5 observations on 3 sites</p>
+          <p id="user_name" style="text-decoration:underline;"></p>
+          <p id="stats_user"></p>
           <p>10th biggest contributor</p>
-          <p>link to Simon's contributions</p>
+          <p><a id="my_observations_link" href="observation.html?id=" target="_blank"></a></p>
         </div>        
       </div>
       <div id="dashTeaser" style="height:30px;width:30px;background-color:rgba(128,128,128,0.5);float: left;margin:185px 0 0 0;padding:5px;text-align:center;border-radius: 0px 4px 4px 0px;border-color:#fff; cursor:pointer;">
