--- a/website/index.html
+++ b/website/index.html
@@ -12,9 +12,9 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 
-    <!-- Local CSS
+    <!-- Local CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-     -->
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -247,28 +247,57 @@ body {
 
     <div class="container marketing">
 
+      <!-- Three columns of text below the carousel -->
+      <div class="row">
+        <div class="col-md-4 text-center">
+          <img src="img/gps-grey-140x140.png">
+          <h2>Locate</h2>
+          <p class="lead">Find the places that need documenting.</p>
+          <!-- <p><a class="btn btn-default" href="#">View details »</a></p> -->
+        </div>
+        <div class="col-md-4 text-center">
+          <img src="img/new-observation-icon-180x186.png">
+          <h2>Tap</h2>
+          <p class="lead">Tap on the icon showing the nearby feature.</p>
+          <!-- <p><a class="btn btn-default" href="#">View details »</a></p> -->
+        </div>
+        <div class="col-md-4 text-center">
+          <img src="img/camera-140x140.png">
+          <h2>Capture</h2>
+          <p class="lead">Record what you see, and even take a photo.</p>
+          <!-- <p><a class="btn btn-default" href="#">View details »</a></p> -->
+        </div>
+      </div><!-- /.row -->
+
+      <hr class="featurette-divider">
+
       <div class="featurette">
-        <img class="featurette-image img-circle pull-right" src="img/GIS_Day_2014_Header_Logo_Retina_140x140.png">
+        <img class="featurette-image pull-right" src="img/GIS_Day_2014_Header_Logo_Retina_crop.png">
         <h2 class="featurette-heading"><a href="http://www.gisday.com.au/competitions/map-app-hack/" target="_blank">GIS Day 2014.</a> <span class="text-muted">Map App Hack Challenge.</span></h2>
         <p class="lead"><strong>Field Correspondent</strong> is a collaboration of Simon O'Keefe (<a href="http://www.groundtruth.com.au" target="_blank">Groundtruth</a>) and Herve Senot (<a href="http://www.groundtruth.com.au" target="_blank">Groundtruth</a>, <a href="http://www.carbongis.com.au" target="_blank">Carbon GIS</a>) for the <a href="http://www.gisday.com.au/competitions/map-app-hack/" target="_blank">Brisbane GIS Day 2014 Map App Hack</a>, a nationwide open data competition. Our challenge was to...</p>
         <blockquote>
         <p><em>develop a great entrepreneurial and creative app that makes use of spatial technology and open data on a smartphone app platform.</em></p>
         </blockquote>
-        <p>In late October 2014, we brainstormed ideas about how we could use the concept of capturing photos from a phone (an exciting new feature in modern mobile browsers) and how it could relate to <em>open data</em>. <strong>Field Correspondent</strong> was born.</p>
-        <p><strong>Field Correspondent</strong> enables you and the people you invite to capture photos and other information about places you care about - directly from a mobile device. No app installation required!</p>
-        <p>Want to build a <strong>photo library</strong> of important historic sites in your town? Select sites from freely available government heritage register and invite community members to capture the photos on their phones.</p>
-        <p>Want to promote a <strong>winery tour</strong> in your region? Upload your winery locations and challenge wine lovers to record each winery visit with a photo.</p>
-        <p>Want to keep a record of maintenance or inspections on your organisation's <strong>assets, facilities or vegetation</strong>? Open up your asset location data to the web and invite your field workers to log their activities on their phone, including before and after photos.</p>
-        <p>Want to enable the public to notify your organisation of <strong>hazards, property damage and littering</strong> they discover directly from their phone? Embed a Field Correspondent map in your website which users can use directly on their mobile device to record the issues that matter to them.</p>
+        <p class="lead">In late October 2014, we brainstormed ideas about how we could use the concept of capturing photos from a phone (an exciting new feature in modern mobile browsers) and how it could relate to <em>open data</em>. <strong>Field Correspondent</strong> was born.</p>
       </div>
 
-      <!-- START THE FEATURETTES -->
+      <hr class="featurette-divider">
+
+      <div class="featurette">
+        <img class="featurette-image img-circle pull-left" src="img/gps-grey.png ">
+        <h2 class="featurette-heading">Data capture.<span class="text-muted"> Simplified.</span></h2>
+        <p class="lead"><strong>Field Correspondent</strong> enables you and the people you invite to capture photos and other information about places you care about - directly from a mobile device. No app installation required.</p>
+        <p class="lead">Want to build a <strong>photo library</strong> of important historic sites in your town? Select sites from freely available government heritage register and invite community members to capture the photos on their phones.</p>
+        <p class="lead">Want to promote a <strong>winery tour</strong> in your region? Upload your winery locations and challenge wine lovers to record each winery visit with a photo.</p>
+        <p class="lead">Want to keep a record of maintenance or inspections on your organisation's <strong>assets, facilities or vegetation</strong>? Open up your asset location data to the web and invite your field workers to log their activities on their phone, including before and after photos.</p>
+        <p class="lead">Want to enable the public to notify your organisation of <strong>hazards, property damage and littering</strong> they discover directly from their phone? Embed a Field Correspondent map in your website which users can use directly on their mobile device to record the issues that matter to them.</p>
+      </div>
 
       <hr class="featurette-divider">
 
       <div class="featurette">
         <!-- <img class="featurette-image img-circle pull-left" src="http://placehold.it/512"> -->
-        <h2 class="featurette-heading">Collaborative information gathering. <span class="text-muted">Simple.</span></h2>
+        <h2 class="featurette-heading">Collaborative information gathering.<span class="text-muted"></span></h2>
         <p class="lead">For public, community groups and authorities.</p>
             <li>community participation</li>
             <li>asset inspections</li>
@@ -297,52 +326,27 @@ body {
 
       <div class="featurette">
         <!-- <img class="featurette-image img-circle pull-right" src="http://placehold.it/512"> -->
-        <h2 class="featurette-heading">Web App vs Native App. <span class="text-muted">No contest.</span></h2>
-        <p class="lead">A web app is an application that is accessible via your device's browser. It looks and behaves like a native app that you download and install from Google Play or iTunes, but with the following advantages</p>
+        <h2 class="featurette-heading">Web App. <span class="text-muted">No installation.</span></h2>
+        <p class="lead">A web app is an application that you access via your device's browser. It looks and behaves like a native app that you download and install from Google Play or iTunes, but with the following advantages</p>
         <li>no installation required</li>
         <li>always up-to-date</li>
         <li>available for all mobile devices (iOS, Android, Windows) and even desktop browsers</li>
         <li>no restrictions on use of technologies</li>
-        <li>no delay, waiting for app store</li>
+        <li>no delay, waiting for app store approval</li>
         </div>
 
       <hr class="featurette-divider">
 
-      <!-- Three columns of text below the carousel -->
-      <div class="row">
-        <div class="col-md-4 text-center">
-          <img src="img/gps-grey-140x140.png">
-          <h2>Locate</h2>
-          <p>Find the places that need documenting.</p>
-          <!-- <p><a class="btn btn-default" href="#">View details »</a></p> -->
-        </div>
-        <div class="col-md-4 text-center">
-          <img src="img/new-observation-icon-180x186.png">
-          <h2>Tap</h2>
-          <p>Tap on the icon showing the nearby feature.</p>
-          <!-- <p><a class="btn btn-default" href="#">View details »</a></p> -->
-        </div>
-        <div class="col-md-4 text-center">
-          <img src="img/camera-140x140.png">
-          <h2>Capture</h2>
-          <p>Record what you see, and even take a photo.</p>
-          <!-- <p><a class="btn btn-default" href="#">View details »</a></p> -->
-        </div>
-      </div><!-- /.row -->
-
-
-      <!-- /END THE FEATURETTES -->
-
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>Field Correspondent: Collaborative location-based information gathering for open data</p>
+        <p class="lead">Field Correspondent: Collaborative location-based information gathering for open data</p>
 
       <!-- Begin MailChimp Signup Form -->
       <div id="mc_embed_signup">
       <form action="http://groundtruth.us3.list-manage.com/subscribe/post?u=41f1d0e21958109c0732cea9f&amp;id=9bbf6a6714" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
           <div id="mc_embed_signup_scroll">
-          <label for="mce-EMAIL">Get notified of further development</label>
+          <label for="mce-EMAIL">Get notified of the ongoing development of Field Correspondent</label>
           <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
           <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
           <div style="position: absolute; left: -5000px;"><input type="text" name="b_41f1d0e21958109c0732cea9f_9bbf6a6714" tabindex="-1" value=""></div>
