--- a/website/index.html
+++ b/website/index.html
@@ -12,9 +12,9 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 
-    <!-- Local CSS -->
+    <!-- Local CSS
     <link rel="stylesheet" href="css/bootstrap.min.css">
-
+     -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
