--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div id="stats_me" style="border:1px;">
           <p id="user_name" style="text-decoration:underline;"></p>
           <p id="stats_user"></p>
-          <p></p>
+          <p id="user_rank"></p>
           <p><a id="my_observations_link" href="observation.html?id=" target="_blank"></a></p>
         </div>        
       </div>
