Add app screenshot

--- a/website/index.html
+++ b/website/index.html
@@ -235,10 +235,12 @@ body {
     </div>
     <!-- /.carousel -->
 
-    <div align=center>
+    <div class="container" align=center>
       <p><a class="btn btn-lg btn-success" href="http://fieldcorrespondent.com/?id=wdjp">Try a demo</a>
     </div>
 
+    <hr>
+    
     <!-- <hr class="featurette-divider"> -->
 
     <!-- Marketing messaging and featurettes
@@ -274,29 +276,36 @@ body {
       <div class="featurette">
         <img class="featurette-image pull-right" src="img/GIS_Day_2014_Header_Logo_Retina_crop.png">
         <h2 class="featurette-heading"><a href="http://www.gisday.com.au/competitions/map-app-hack/" target="_blank">GIS Day 2014.</a> <span class="text-muted">Map App Hack Challenge.</span></h2>
-        <p class="lead"><strong>Field Correspondent</strong> is a collaboration of Simon O'Keefe (<a href="http://www.groundtruth.com.au" target="_blank">Groundtruth</a>) and Herve Senot (<a href="http://www.groundtruth.com.au" target="_blank">Groundtruth</a>, <a href="http://www.carbongis.com.au" target="_blank">Carbon GIS</a>) for the <a href="http://www.gisday.com.au/competitions/map-app-hack/" target="_blank">Brisbane GIS Day 2014 Map App Hack</a>, a nationwide open data competition. Our challenge was to...</p>
+        <p class="lead"><strong>Field Correspondent</strong> is a collaboration of Herve Senot (<a href="http://www.groundtruth.com.au" target="_blank">Groundtruth</a>, <a href="http://www.carbongis.com.au" target="_blank">Carbon GIS</a>) and Simon O'Keefe (<a href="http://www.groundtruth.com.au" target="_blank">Groundtruth</a>) for the <a href="http://www.gisday.com.au/competitions/map-app-hack/" target="_blank">Brisbane GIS Day 2014 Map App Hack</a>, a nationwide open data competition. Our challenge was to...</p>
         <blockquote>
         <p><em>develop a great entrepreneurial and creative app that makes use of spatial technology and open data on a smartphone app platform.</em></p>
         </blockquote>
-        <p class="lead">In late October 2014, we brainstormed ideas about how we could use the concept of capturing photos from a phone (an exciting new feature in modern mobile browsers) and how it could relate to <em>open data</em>. <strong>Field Correspondent</strong> was born.</p>
+        <p class="lead">In late October 2014, we brainstormed ideas about how we could use the concept of capturing photos from a phone (a feature in modern mobile browsers) and how it could relate to <em>open data</em>. <strong>Field Correspondent</strong> was born.</p>
       </div>
 
       <hr class="featurette-divider">
 
       <div class="featurette">
-        <img class="featurette-image img-circle pull-left" src="img/gps-grey.png ">
-        <h2 class="featurette-heading">Data capture.<span class="text-muted"> Simplified.</span></h2>
+        <img class="featurette-image pull-left" src="img/gps-grey.png">
+        <h2 class="featurette-heading">Data capture. <span class="text-muted">Simplified.</span></h2>
         <p class="lead"><strong>Field Correspondent</strong> enables you and the people you invite to capture photos and other information about places you care about - directly from a mobile device. No app installation required.</p>
-        <p class="lead">Want to build a <strong>photo library</strong> of important historic sites in your town? Select sites from freely available government heritage register and invite community members to capture the photos on their phones.</p>
-        <p class="lead">Want to promote a <strong>winery tour</strong> in your region? Upload your winery locations and challenge wine lovers to record each winery visit with a photo.</p>
-        <p class="lead">Want to keep a record of maintenance or inspections on your organisation's <strong>assets, facilities or vegetation</strong>? Open up your asset location data to the web and invite your field workers to log their activities on their phone, including before and after photos.</p>
-        <p class="lead">Want to enable the public to notify your organisation of <strong>hazards, property damage and littering</strong> they discover directly from their phone? Embed a Field Correspondent map in your website which users can use directly on their mobile device to record the issues that matter to them.</p>
       </div>
 
       <hr class="featurette-divider">
 
       <div class="featurette">
-        <!-- <img class="featurette-image img-circle pull-left" src="http://placehold.it/512"> -->
+        <img class="featurette-image pull-right" src="img/new-observation-icon.png">
+        <h2 class="featurette-heading">Your places. <span class="text-muted">Your people.</span></h2>
+        <p>Want to build a <strong>photo library</strong> of important historic sites in your town? Select sites from freely available government heritage register and invite community members to capture the photos on their phones.</p>
+        <p>Want to promote a <strong>winery tour</strong> in your region? Upload your winery locations and challenge wine lovers to record each winery visit with a photo.</p>
+        <p>Want to keep a record of maintenance or inspections on your organisation's <strong>assets, facilities or vegetation</strong>? Open up your asset location data to the web and invite your field workers to log their activities on their phone, including before and after photos.</p>
+        <p>Want to enable the public to notify your organisation of <strong>hazards, property damage and littering</strong> they discover directly from their phone? Embed a Field Correspondent map in your website which users can use directly on their mobile device to record the issues that matter to them.</p>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="featurette">
+        <img class="featurette-image pull-right" src="img/fc-app-hbcc-ho-map-360x497.png">
         <h2 class="featurette-heading">Collaborative information gathering.<span class="text-muted"></span></h2>
         <p class="lead">For public, community groups and authorities.</p>
             <li>community participation</li>
@@ -325,14 +334,13 @@ body {
       <hr class="featurette-divider">
 
       <div class="featurette">
-        <!-- <img class="featurette-image img-circle pull-right" src="http://placehold.it/512"> -->
-        <h2 class="featurette-heading">Web App. <span class="text-muted">No installation.</span></h2>
-        <p class="lead">A web app is an application that you access via your device's browser. It looks and behaves like a native app that you download and install from Google Play or iTunes, but with the following advantages</p>
-        <li>no installation required</li>
-        <li>always up-to-date</li>
-        <li>available for all mobile devices (iOS, Android, Windows) and even desktop browsers</li>
-        <li>no restrictions on use of technologies</li>
-        <li>no delay, waiting for app store approval</li>
+        <img class="featurette-image pull-right" src="img/camera-140x140.png">
+        <h2 class="featurette-heading">Web App. <span class="text-muted">No worries.</span></h2>
+        <p class="lead">A web app is an application that you access via your device's browser. It looks and behaves like a native app, and even uses the device's GPS and camera, and has some critical advantages:</p>
+        <li>no app installation required</li>
+        <li>always up-to-date: updates can be pushed out to users at any time</li>
+        <li>available on all devices (iOS, Android, Windows) and even desktop browsers</li>
+        <li>no waiting for app store approval</li>
         </div>
 
       <hr class="featurette-divider">
@@ -340,7 +348,7 @@ body {
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p class="lead">Field Correspondent: Collaborative location-based information gathering for open data</p>
+        <!-- <p class="lead">Field Correspondent: Collaborative location-based information gathering for open data</p> -->
 
       <!-- Begin MailChimp Signup Form -->
       <div id="mc_embed_signup">
