--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
       <img src="img/gps.png"/>
     </div>
     <!--script src="ol3/resources/bootstrap/js/bootstrap.min.js" type="text/javascript"></script-->
-    <script src="loader.js?id=mobile-full-screen" type="text/javascript"></script>
+    <!-- The loader doesn't work anymore -->
+    <script src="ol3/build/ol.js" type="text/javascript"></script>
+    <script src="mobile-full-screen.js" type="text/javascript"></script>
     <script src="plugins/binaryajax.js"></script>
     <script src="plugins/exif.js"></script>
     <script src="plugins/canvasResize.js"></script>
